# exqudens-conan-libusb

./: CMakeLists.txt  CMakePresets.json  build-conanfile.py  conanfile.py  config.h.in  name-version.txt  readme.md  test-conanfile.py
src/test/cpp/: TestApplication.cpp  TestUtils.cpp  TestUtils.hpp  stress.h
src/test/cpp/system/: FunctionalSystemTests.hpp
src/test/cpp/unit/: FunctionalUnitTests.hpp
src/test/resources/vscode/: launch.json
